--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/2_dressedupmeatballs/2_47.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/2_dressedupmeatballs/2_47.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: Peel-Peel 1 garlic clove
   end_time: 120.38310789331211
   errors:
-  - description: 2 instead of 1 garlic clove
+  - description: Peeled 2 instead of 1 garlic clove
     tag: Measurement Error
   modified_description: Peel-Peel 2 garlic cloves
   start_time: 18.650904039808914
@@ -19,8 +19,6 @@ step_annotations:
   errors:
   - description: cut into 4 pieces
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: cut-Cut onion into four pieces
   start_time: 176.33582001273885
   step_id: 27
@@ -29,15 +27,13 @@ step_annotations:
   errors:
   - description: Chop instead of slice
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Chop-Chop 1/8 medium onion
   start_time: 189.6
   step_id: 19
 - description: Cut-Cut 1/4 medium carrot into short, thin strips
   end_time: 279.76356059713373
   errors:
-  - description: the size of carrot is not thin strips
+  - description: Carrot is not cut into thin strips
     tag: Technique Error
   modified_description: Cut-Cut 1/4 medium carrot into short strips
   start_time: 239.07067905573248
@@ -47,45 +43,40 @@ step_annotations:
   errors:
   - description: 3 meatballs instead of 5 meatballs
     tag: Measurement Error
-  - description: Step performed after correct order
-    tag: Order Error
   modified_description: Place-Place 3 meatballs in a Microwave-safe plate
   start_time: 281.45909732802545
   step_id: 21
 - description: Microwave-Microwave the plate, covered, on high for 1.5 minutes
   end_time: 509.4
   errors:
-  - description: 3 instead of 1.5 minutes
+  - description: Microwave for 3 min instead of 1.5 minutes
     tag: Timing Error
-  - description: medium instead of high
+  - description: Microwave on medium instead of high
     tag: Temperature Error
+  - description: Microwaving before adding vegatables and sauces
+    tag: Order Error
   modified_description: Microwave-Microwave the plate, covered, on medium for 3 minutes
   start_time: 313.2
   step_id: 20
 - description: Stir-Stir the contents in the microwave with a spoon
   end_time: 569.7
   errors:
-  - description: Stir the contents outside the microwave
-    tag: Technique Error
-  - description: Meatball dropped while stirring
-    tag: Technique Error
-  modified_description: Stir-Stir the contents outside the microwave with a spoon
-    and meatball drop on the ground
+  - description: Stirring before adding vegetables and sauces
+    tag: Order Error
   start_time: 547.65
   step_id: 18
 - description: Cut-Cut 1/8 garlic clove
   end_time: 593.4378558121019
   errors:
-  - description: 1/2 instead of 1/8
+  - description: Cut 1/2 instead of 1/8 garlic clove
     tag: Measurement Error
   modified_description: Cut-Cut 1/2 garlic clove
   start_time: 576.4824885031848
   step_id: 16
-- description: Mix-Mix 1/4 cup sweet-and-sour sauce and 1/2 teaspoon soy sauce in
-    a small bowl
+- description: Mix-Mix 1/4 cup sweet-and-sour sauce and 1/2 teaspoon soy sauce in a small bowl
   end_time: 715.5165004363057
   errors:
-  - description: Step performed after correct order
+  - description: Preparing the mixture after microwaving the meatballs
     tag: Order Error
   start_time: 596.8289292738854
   step_id: 23
@@ -100,43 +91,33 @@ step_annotations:
 - description: Pour-Pour the sauces over the meatballs
   end_time: 786.729043133758
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after microwaving the meatballs and before topping vegetables
     tag: Order Error
+  - description: Dropping one meatball from the plate while pouring the sauces
+    tag: Technique Error
   start_time: 747.7316983232485
   step_id: 15
 - description: Top-Top the plate with the carrots, onion, garlic and 1/4 tsp pepper
     powder
   end_time: 851.1594389076433
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after microwaving meatballs and pouring the sauces
     tag: Order Error
   start_time: 790.1201165955413
   step_id: 24
 - description: Microwave-Microwave the plate, covered, on high for 1.5 minutes
   end_time: 947.8050325684715
   errors:
-  - description: 1 minute instead of 1.5 minutes
+  - description: Microwaving for 1 minute instead of 1.5 minutes
     tag: Timing Error
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Microwave-Microwave the plate, covered, on high for 1 minute
   start_time: 854.5505123694268
   step_id: 20
 - description: Stir-Stir the contents in the microwave with a spoon
   end_time: 966.4559366082804
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 942.7184223757962
   step_id: 18
 - description: Microwave-Microwave for 1 more minute
   end_time: 1054.6238466146497
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 968.151473339172
   step_id: 25
